--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <header id="header">To-do List</header>
+    <header id="header" class="bg-primary d-flex justify-content-center align-items-center text-decoration-underline fs-1">To-do List</header>
     <div class="container mt-4 p-3">
         <h2 id="project-title">Project Title</h2>
+        <div class="task mt-1 bg-secondary rounded p-2 ps-3">Task 1</div>
+        <div class="task mt-1 bg-secondary rounded p-2 ps-3">Task 2</div>
+        <div class="task mt-1 bg-secondary rounded p-2 ps-3">Task 3</div>
     </div>
 </body>
 </html>
