--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         class="text-muted bg-primary d-flex justify-content-center align-items-center text-decoration-underline fs-1">
         To-do List
     </header>
-    <div class="container mt-4 p-3 rounded">
+    <div id="project-container" class="container mt-4 p-3 rounded">
         <h2 id="project-title">Project Title</h2>
         <div class="task mt-1 bg-secondary rounded p-2 ps-3">
             <div class="row">
@@ -23,8 +23,8 @@
                     Task 1
                 </div>
                 <div class="col-sm">Due date: tomorrow
-                    <svg title='Delete task' class="delete-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <title>delete</title>
+                    <svg class="delete-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <title>Delete Task</title>
                         <path
                             d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" />
                     </svg>
@@ -38,8 +38,8 @@
                     Task 2
                 </div>
                 <div class="col-sm">Due date: tomorrow
-                    <svg title='Delete task' class="delete-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <title>delete</title>
+                    <svg class="delete-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <title>Delete Task</title>
                         <path
                             d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" />
                     </svg>
@@ -53,8 +53,8 @@
                     Task 3
                 </div>
                 <div class="col-sm">Due date: tomorrow
-                    <svg title='Delete task' class="delete-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <title>delete</title>
+                    <svg class="delete-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <title>Delete Task</title>
                         <path
                             d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" />
                     </svg>
@@ -62,6 +62,7 @@
 
             </div>
         </div>
+        <button type="button" id="add-task-button">Add Task</button>
     </div>
 </body>
 
