feat: rename .js modules for readability / add initial projectHandler.js

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To-do List</title>
     <link rel="stylesheet" href="styles.css">
     <script type="module" src="script.js"></script>
 </head>
@@ -14,7 +14,25 @@
         class="text-muted bg-primary d-flex justify-content-center align-items-center text-decoration-underline fs-1">
         To-do List
     </header>
+
+    <!-- Projects -->
     <div id="project-container" class="container mt-4 p-3 rounded">
+        <h2>Your Projects</h2>
+        <div class="border border-dark p-3 rounded">
+            <div class="row">
+                <div class="col-sm m-1 bg-danger rounded">a</div>
+                <div class="col-sm m-1 bg-danger rounded">v</div>
+            </div>
+            <div class="row">
+                <div class="col-sm m-1 bg-warning rounded">c</div>
+                <div class="col-sm m-1 bg-warning rounded">c</div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- To-dos -->
+    <div id="project-container" class="container mt-4 p-3 rounded d-none">
         <h2 id="project-title">Project Title</h2>
         <div class="task mt-1 bg-secondary rounded p-2 ps-3">
             <div class="row">
@@ -25,8 +43,7 @@
                 <div class="col-sm">Due date: tomorrow
                     <svg class="delete-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <title>Delete Task</title>
-                        <path
-                            d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" />
+                        <path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" />
                     </svg>
                 </div>
             </div>
@@ -40,8 +57,7 @@
                 <div class="col-sm">Due date: tomorrow
                     <svg class="delete-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <title>Delete Task</title>
-                        <path
-                            d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" />
+                        <path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" />
                     </svg>
                 </div>
             </div>
@@ -55,8 +71,7 @@
                 <div class="col-sm">Due date: tomorrow
                     <svg class="delete-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <title>Delete Task</title>
-                        <path
-                            d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" />
+                        <path d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z" />
                     </svg>
                 </div>
 
