--- a/index.html
+++ b/index.html
@@ -16,23 +16,20 @@
     </header>
 
     <!-- Projects -->
-    <div id="project-container" class="container mt-4 p-3 rounded">
+    <div class="container mt-4 p-3 rounded">
         <h2>Your Projects</h2>
-        <div class="border border-dark p-3 rounded">
-            <div class="row">
-                <div class="col-sm m-1 bg-danger rounded">a</div>
-                <div class="col-sm m-1 bg-danger rounded">v</div>
-            </div>
-            <div class="row">
-                <div class="col-sm m-1 bg-warning rounded">c</div>
-                <div class="col-sm m-1 bg-warning rounded">c</div>
-            </div>
+        <div id="projects-container" class="border border-dark p-3 rounded">
+            <!-- <div class="project col-sm m-1 p-1 bg-danger rounded">a</div>
+            <div class="project col-sm m-1 p-1 bg-danger rounded">v</div>
+            <div class="project col-sm m-1 p-1 bg-warning rounded">c</div>
+            <div class="project col-sm m-1 p-1 bg-warning rounded">c</div> -->
         </div>
+        <button type="button" class="mt-3" id="create-project-button">Create Project</button>
     </div>
 
 
     <!-- To-dos -->
-    <div id="project-container" class="container mt-4 p-3 rounded d-none">
+    <div id="tasks-container" class="container mt-4 p-3 rounded d-none">
         <h2 id="project-title">Project Title</h2>
         <div class="task mt-1 bg-secondary rounded p-2 ps-3">
             <div class="row">
