feat: add instructions and filters to project title names

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <!-- Projects -->
-    <div class="container mt-4 p-3 rounded">
+    <div id="projects-display" class="container mt-4 p-3 rounded">
         <h2>Your Projects</h2>
         <div id="projects-container" class="border border-dark p-3 rounded">
             <!-- <div class="project col-sm m-1 p-1 bg-danger rounded">a</div>
@@ -74,7 +74,8 @@
 
             </div>
         </div>
-        <button type="button" id="add-task-button">Add Task</button>
+        <button type="button" id="add-task-button" class="mt-2">Add Task</button>
+        <button type="button" id="projects-button" class="mt-2">Back to Your Projects</button>
     </div>
 </body>
 
