feat: add tasks to project

--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
             </div>
         </div>
         <button type="button" id="add-task-button" class="mt-2">Add Task</button>
+        <div class="container d-none" id="task-creation-container">
+            <label for="task-title">Task title: <input id="task-title" type="text"></label>
+            <label for="task-due-date">Due date: <input id="task-due-date" type="text"></label>
+            <!-- <label for="task-title">Priority: <input id="task-title" type=""></label> -->
+            <button type="button" id="task-creation-button">Create Task</button>
+        </div>
         <button type="button" id="projects-button" class="mt-2">Back to Your Projects</button>
     </div>
 </body>
