--- a/index.html
+++ b/index.html
@@ -1,49 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-do List</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-    <script type="module" src="script.js"></script>
-<script defer src="main.js"></script><link href="main.css" rel="stylesheet"></head>
-
-<body>
-    <header id="header"
-        class="text-muted bg-primary d-flex justify-content-center align-items-center text-decoration-underline fs-1">
-        To-do List
-    </header>
-
-    <!-- Projects -->
-    <div id="projects-display" class="container mt-4 p-3 rounded">
-        <h2>Your Projects</h2>
-        <div id="projects-container" class="border border-dark p-3 rounded">
-        </div>
-        <button type="button" class="mt-3" id="create-project-button">Create Project</button>
-    </div>
-
-
-    <!-- To-dos -->
-    <div id="tasks-container" class="container mt-4 p-3 rounded d-none">
-
-        <button type="button" id="add-task-button" class="mt-2">Add Task</button>
-        <div class="container d-none" id="task-creation-container">
-            <label for="task-title">Task title: <input id="task-title" type="text"></label><br>
-            <label for="task-due-date">Due date: <input id="task-due-date" type="text"></label><br>
-            <label for="priority">Priority level:
-                <select name="priority" id="priority">
-                    <option value="low">Low</option>
-                    <option value="medium">Medium</option>
-                    <option value="high">High</option>
-                </select>
-            </label><br>
-            <button type="button" id="task-creation-button">Create Task</button>
-        </div>
-        <button type="button" id="projects-button" class="mt-2">Back to Your Projects</button>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>To-do List</title><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"><link rel="stylesheet" href="styles.css"><script type="module" src="script.js"></script><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body><header id="header" class="text-muted bg-primary d-flex justify-content-center align-items-center text-decoration-underline fs-1">To-do List</header><div id="projects-display" class="container mt-4 p-3 rounded"><h2>Your Projects</h2><div id="projects-container" class="border border-dark p-3 rounded"></div><button type="button" class="mt-3" id="create-project-button">Create Project</button></div><div id="tasks-container" class="container mt-4 p-3 rounded d-none"><button type="button" id="add-task-button" class="mt-2">Add Task</button><div class="container d-none" id="task-creation-container"><label for="task-title">Task title: <input id="task-title"></label><br><label for="task-due-date">Due date: <input id="task-due-date"></label><br><label for="priority">Priority level: <select name="priority" id="priority"><option value="low">Low</option><option value="medium">Medium</option><option value="high">High</option></select></label><br><button type="button" id="task-creation-button">Create Task</button></div><button type="button" id="projects-button" class="mt-2">Back to Your Projects</button></div><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script></body></html>
