refactor: change due date input from text to date

--- a/src/template.html
+++ b/src/template.html
@@ -31,7 +31,7 @@
         <button type="button" id="add-task-button" class="mt-2">Add Task</button>
         <div class="container d-none" id="task-creation-container">
             <label for="task-title">Task title: <input id="task-title" type="text"></label><br>
-            <label for="task-due-date">Due date: <input id="task-due-date" type="text"></label><br>
+            <label for="task-due-date">Due date: <input id="task-due-date" type="date"></label><br>
             <label for="priority">Priority level:
                 <select name="priority" id="priority">
                     <option value="low">Low</option>
